--- a/app/src/main/res/layout/activity_current_stop.xml
+++ b/app/src/main/res/layout/activity_current_stop.xml
@@ -1,10 +1,20 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
+        android:id="@+id/bus_stop"
+        android:layout_width="match_parent"
+        android:text="გაჩერების ტაბლო"
+        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content">
+    </TextView>
 
     <ListView
         android:id="@+id/bus_list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
 
