--- a/app/src/main/res/layout/activity_route_stops.xml
+++ b/app/src/main/res/layout/activity_route_stops.xml
@@ -1,4 +1,4 @@
-<LinearLayout android:layout_width="wrap_content"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
