--- a/app/src/main/res/layout/view_busstop.xml
+++ b/app/src/main/res/layout/view_busstop.xml
@@ -25,7 +25,7 @@
         </TextView>
         <Button
             android:id="@+id/show_more"
-            android:text="More"
+            android:text="მეტის ნახვა"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </Button>
